--- a/Day 2/Assignment2.css
+++ b/Day 2/Assignment2.css
@@ -9,7 +9,6 @@ body{
     font-size: 20px;
     font-style: oblique;
     text-align: center;
-    f
 }
 h1{
     font-size: 80px;
@@ -47,7 +46,7 @@ h2,#explore h3{
 #explore{
     padding: 10px;
     text-decoration: none;
-    ext-shadow: 0px 5px 5px gold;
+    text-shadow: 0px 5px 5px gold;
 }
 #ending h2{
     color:white;
