--- a/Day 2/Assignment3.css
+++ b/Day 2/Assignment3.css
@@ -1,17 +1,120 @@
+*{
+  margin: 0%;
+  padding: 0%;
+}
 body, html {
-    height: 100%;
+  height: 100%;
+  background-color: darkgreen;
+}
+div.para
+{
+    position: relative;
+}
+.hero-image {
+  background-image: url("https://www.teahub.io/photos/full/21-213521_music-hd-music-wallpapers-widescreen-pictures-from-blue.jpg");
+  height: 1000px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+.button1{
+  position: absolute;
+  top: 250px;
+  left: 275px;
+transform: translate(-50%,-50%);
+}
+img
+{   
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+}
+h1
+{
+    font-family: sans-serif;
+    color: white;
+    font-size: 55px;
+}
+p.hello
+{
+    position: absolute;
+    top: 420px;
+    left: 450px;
+    font-family: sans-serif;
+    font-size: 15px;
+    color: white;
+    
+}
+a
+{
+    position: absolute;
+    top: 500px;
+    left: 900px;
+    font-family: sans-serif;
+    font-size: 29px;
+    color: white;
+    border-style: solid;
+    padding: 20px;
+    border-radius: 25px;
+    background-color: black;
+    text-decoration: none;  
+}
+a:hover {
+    text-decoration: underline;
+    background-color: darkgreen;
   }
-  
-.bg {
-    /* The image used */
-    background-image: url("https://free4kwallpapers.com/uploads/originals/2021/01/20/music-wallpaper.jpg");
-  
-    /* Full height */
-    height: 100%;
-  
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
+p.first
+{
+    background-color: darkgreen;
+    font-family: sans-serif;
+    font-size: 20px;
+    text-align: center;
+    padding: 50px;
+}
+p.second
+{
+    background-color: black;
+    font-family: sans-serif;
+    font-size: 20px;
+    color: darkgreen;
+    text-align: center;
+    padding: 50px;
+}
+div.hello
+{
+    float: left;
+    width: 26%;
+    padding: 3%;
+    font-family: sans-serif;
+    font-size: 20px;
+    text-align: center;
+}
+div.hello2
+{
+    float: left;
+    color: darkgreen;
+    width: 26%;
+    padding: 3%;
+    background-color: black;
+    font-family: sans-serif;
+    font-size: 20px;
+    text-align: center;
+}
+div.hello3
+{
+    float: left;
+    width: 26%;
+    padding: 3%;
+    font-family: sans-serif;
+    font-size: 20px;
+    text-align: center;
+}
