--- a/Day 3/Photgraphy.css
+++ b/Day 3/Photgraphy.css
@@ -155,32 +155,32 @@ a:hover{
 }
 #TopPhoto{
     background-image: url("https://www.pixelstalk.net/wp-content/uploads/images1/Sony-camera-backgrounds-1920x1080.jpg");
-    background-size: cover;
+    background-size: 80%;
     padding: 20px;
     text-align: center;
-    height: 100vh;
+    height: 75vh;
 }
 #TopPhoto h2{
-    font-size: 90px;
-    padding-top: 5vh;
+    font-size: 50px;
+    padding-top: 3vh;
     color: white;
     font-family: 'Tapestry', cursive;
     padding-bottom: 20px;
 }
-#card{
+#TopPhoto #card{
     background-color: black;
     width: 20%;
-    height: 650px;
+    height: 600px;
     padding: 10px;
     border-radius: 20px;
     border: 2px double white;
 }
-#caption{
+#TopPhoto caption{
     align-items: center;
     color: white;
     justify-content: space-evenly;
     padding: 20px;
-    font-family: 'Markazi Text', serif;
+    font-family: 'Charm', cursive;
     font-size: 20px;
 }
 #caption h3{
@@ -188,7 +188,7 @@ a:hover{
     text-decoration: underline;
     font-family: ;
     padding: 20px;
-    font-family: 'Tapestry', cursive;
+    font-family: 'Charm', cursive;
     color: greenyellow;
 }
 .cardContainer{
@@ -196,4 +196,40 @@ a:hover{
     flex-wrap: wrap;
     justify-content: space-evenly;
 
+}
+#fixedbutton {
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    width: 50px;
+    background-color: white;
+}
+#footer{
+    background-image: url("https://images.unsplash.com/photo-1603366615917-1fa6dad5c4fa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8OXx8fGVufDB8fHx8&w=1000&q=80");
+    height: auto;
+}
+#footer h1{
+    font-size: 30px;
+    color: white;
+    text-align: center;
+}
+.copyright{
+    overflow: hidden;
+   padding: 2px;
+   display: flex;
+   justify-content:center;
+   align-items:center;
+   height: 5vh;
+   font-family: 'Charm', cursive;
+   width: 100%;
+}
+.copyright a{
+    color: yellow;
+}
+.sources a{
+    width: 50%;
+    padding: 20px 20px;
+    font-size: 30px;
+    text-decoration: none;
+    font-family: 'Tapestry', cursive;
 }
