--- a/Day 2/Assignment3.css
+++ b/Day 2/Assignment3.css
@@ -5,61 +5,51 @@
 body, html {
   height: 100%;
   background-color: darkgreen;
+  
 }
 div.para
 {
     position: relative;
 }
 .hero-image {
-  background-image: url("https://www.teahub.io/photos/full/21-213521_music-hd-music-wallpapers-widescreen-pictures-from-blue.jpg");
-  height: 1000px;
-  background-position: center;
-  background-repeat: no-repeat;
+  background-image: url("https://wallpaperaccess.com/full/898474.jpg");
+  height: 1010px;
   background-size: cover;
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .hero-text {
   text-align: center;
-  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+  font-family: 'Charm', cursive;
+  font-size: 30px;
+  
 }
 .button1{
   position: absolute;
-  top: 250px;
-  left: 275px;
-transform: translate(-50%,-50%);
-}
-img
-{   
-    width: 100%;
-    height: 100vh;
-    z-index: -1;
-}
-h1
-{
-    font-family: sans-serif;
-    color: white;
-    font-size: 55px;
+  top: 300px;
+  left:400px;
+  transform: translate(-50%,-50%);
 }
 p.hello
 {
     position: absolute;
     top: 420px;
     left: 450px;
-    font-family: sans-serif;
-    font-size: 15px;
+    font-family: 'Cookie', cursive;
+    font-size: 30px;
     color: white;
-    
 }
 a
 {
     position: absolute;
     top: 500px;
     left: 900px;
-    font-family: sans-serif;
+    font-family: 'Cookie', cursive;
     font-size: 29px;
     color: white;
     border-style: solid;
@@ -69,22 +59,21 @@ a
     text-decoration: none;  
 }
 a:hover {
-    text-decoration: underline;
-    background-color: darkgreen;
+  box-shadow: 2px 2px 10px white;
   }
 p.first
 {
     background-color: darkgreen;
-    font-family: sans-serif;
-    font-size: 20px;
+    font-family: 'Cookie', cursive;
+    font-size: 41.25px;
     text-align: center;
     padding: 50px;
 }
 p.second
 {
     background-color: black;
-    font-family: sans-serif;
-    font-size: 20px;
+    font-family: 'Cookie', cursive;
+    font-size: 41.25px;
     color: darkgreen;
     text-align: center;
     padding: 50px;
@@ -94,8 +83,8 @@ div.hello
     float: left;
     width: 26%;
     padding: 3%;
-    font-family: sans-serif;
-    font-size: 20px;
+    font-family: 'Cookie', cursive;
+    font-size: 41.25px;
     text-align: center;
 }
 div.hello2
@@ -105,8 +94,8 @@ div.hello2
     width: 26%;
     padding: 3%;
     background-color: black;
-    font-family: sans-serif;
-    font-size: 20px;
+    font-family: 'Cookie', cursive;
+    font-size: 41.25px;
     text-align: center;
 }
 div.hello3
@@ -114,7 +103,7 @@ div.hello3
     float: left;
     width: 26%;
     padding: 3%;
-    font-family: sans-serif;
-    font-size: 20px;
+    font-family: 'Cookie', cursive;
+    font-size: 41.25px;
     text-align: center;
 }
