--- a/Day 5/Assignment-5.css
+++ b/Day 5/Assignment-5.css
@@ -5,17 +5,29 @@
 .sky{
     width: 100%;
     height: 100vh;
-    background-image: url("https://www.eventstodayz.com/wp-content/uploads/2017/08/Night-City-wallpapers.jpg");
+    background-image: url("https://images.unsplash.com/photo-1544656376-ffe19d4b7353?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80");
     position: relative;
     overflow: hidden;
     background-repeat: repeat-x;
     background-size: cover;
+    transition: transform 2s;
 }
-
-.highway img{
+.city img{
+    width: 200%;
+    position: absolute;
+    height: 1000px;
+    bottom: 100px;
+    animation: city 5s linear infinite;
+}
+@keyframes city {
+    100%{
+        transform: translateX(-10%);
+    }
+}
+.highway{
     width: 300%;
     position: absolute;
-    background-repeat: repeat-x;
+    background-image: url("Assets/highway.jpg");
     bottom: 0;
     left: 0;
     right: 0;
@@ -24,9 +36,10 @@
 }
 @keyframes highway {
     100%{
-        transform: translateX(-30%);
+        transform: translateX(-20%);
     }
 }
+
 .car img{
     width: 20%;
     height: auto;
